Fixed right panel top cover's wrong width

--- a/browser/moe-style.css
+++ b/browser/moe-style.css
@@ -150,7 +150,7 @@ html, body {
 .cover-top {
     position: absolute;
     top: 0;
-    width: 50%;
+    width: 100%;
     height: 45px;
     z-index: 1000;
 }
